--- a/Visualización-1.ipynb
+++ b/Visualización-1.ipynb
@@ -79,14 +79,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkConeSource (0000020C20AA0EA0)\n",
+      "vtkConeSource (000001EED48F4930)\n",
       "  Debug: Off\n",
       "  Modified Time: 68\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 0000020C1F2B8AC0\n",
+      "  Executive: 000001EED2DCE2E0\n",
       "  ErrorCode: No error\n",
-      "  Information: 0000020C20A90960\n",
+      "  Information: 000001EED4631DE0\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -122,14 +122,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkCubeSource (0000020C1B7A6C40)\n",
+      "vtkCubeSource (000001EECF24B9C0)\n",
       "  Debug: Off\n",
       "  Modified Time: 96\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 0000020C1F2B8BE0\n",
+      "  Executive: 000001EED2DCE640\n",
       "  ErrorCode: No error\n",
-      "  Information: 0000020C20A909D0\n",
+      "  Information: 000001EED2BFA710\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -161,14 +161,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkCylinderSource (0000020C1B7A6D40)\n",
+      "vtkCylinderSource (000001EECF24C1C0)\n",
       "  Debug: Off\n",
       "  Modified Time: 124\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 0000020C1F2B8E20\n",
+      "  Executive: 000001EED2DCE520\n",
       "  ErrorCode: No error\n",
-      "  Information: 0000020C20A918B0\n",
+      "  Information: 000001EED2BF9D00\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -198,14 +198,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkSphereSource (0000020C1F2AD8E0)\n",
+      "vtkSphereSource (000001EED2DCE400)\n",
       "  Debug: Off\n",
       "  Modified Time: 152\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 0000020C1F2AE8A0\n",
+      "  Executive: 000001EED2DCE880\n",
       "  ErrorCode: No error\n",
-      "  Information: 0000020C20A91680\n",
+      "  Information: 000001EED2BF91A0\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "09233e08-98c5-4df0-80e8-38dbdb9e765c",
    "metadata": {},
    "outputs": [
@@ -250,14 +250,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOBJReader (0000020C1F15B240)\n",
+      "vtkOBJReader (000001EED453D900)\n",
       "  Debug: Off\n",
-      "  Modified Time: 208\n",
+      "  Modified Time: 240\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 0000020C1F2AEAE0\n",
+      "  Executive: 000001EED2DCDC20\n",
       "  ErrorCode: No error\n",
-      "  Information: 0000020C20A91920\n",
+      "  Information: 000001EED2BFA010\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "74028a95-085e-4afa-94ff-127c6ced32c6",
    "metadata": {},
    "outputs": [
@@ -287,14 +287,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOBJReader (0000020C1F15B240)\n",
+      "vtkOBJReader (000001EED453D900)\n",
       "  Debug: Off\n",
-      "  Modified Time: 359\n",
+      "  Modified Time: 391\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 0000020C1F2AEAE0\n",
+      "  Executive: 000001EED2DCDC20\n",
       "  ErrorCode: No error\n",
-      "  Information: 0000020C20A91920\n",
+      "  Information: 000001EED2BFA010\n",
       "  AbortExecute: Off\n",
       "  Progress: 1\n",
       "  Progress Text: (None)\n",
@@ -333,18 +333,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bf7d074e-a954-4d92-9a92-2a45ebe863fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "# source = coneSource # Se puede cambiar la fuente\n",
-    "source = reader # Se puede cambiar la fuente"
+    "# source = reader # Se puede cambiar la fuente\n",
+    "source = sphereSource"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "id": "3ace645b-61af-4610-a3d0-48be65685b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkPolyData (000001EED2BDE770)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 453\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Information: 000001EED2BF8F70\n",
+      "  Data Released: False\n",
+      "  Global Release Data: Off\n",
+      "  UpdateTime: 0\n",
+      "  Field Data:\n",
+      "    Debug: Off\n",
+      "    Modified Time: 450\n",
+      "    Reference Count: 1\n",
+      "    Registered Events: (none)\n",
+      "    Number Of Arrays: 0\n",
+      "    Number Of Components: 0\n",
+      "    Number Of Tuples: 0\n",
+      "  Number Of Points: 0\n",
+      "  Number Of Cells: 0\n",
+      "  Cell Data:\n",
+      "    Debug: Off\n",
+      "    Modified Time: 453\n",
+      "    Reference Count: 1\n",
+      "    Registered Events: \n",
+      "      Registered Observers:\n",
+      "        vtkObserver (000001EED483E410)\n",
+      "          Event: 33\n",
+      "          EventName: ModifiedEvent\n",
+      "          Command: 000001EED2D2B950\n",
+      "          Priority: 0\n",
+      "          Tag: 1\n",
+      "    Number Of Arrays: 0\n",
+      "    Number Of Components: 0\n",
+      "    Number Of Tuples: 0\n",
+      "    Copy Tuple Flags: ( 1 1 1 1 1 0 1 1 1 1 1 )\n",
+      "    Interpolate Flags: ( 1 1 1 1 1 0 0 1 1 1 1 )\n",
+      "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
+      "    Scalars: (none)\n",
+      "    Vectors: (none)\n",
+      "    Normals: (none)\n",
+      "    TCoords: (none)\n",
+      "    Tensors: (none)\n",
+      "    GlobalIds: (none)\n",
+      "    PedigreeIds: (none)\n",
+      "    EdgeFlag: (none)\n",
+      "    Tangents: (none)\n",
+      "    RationalWeights: (none)\n",
+      "    HigherOrderDegrees: (none)\n",
+      "  Point Data:\n",
+      "    Debug: Off\n",
+      "    Modified Time: 452\n",
+      "    Reference Count: 1\n",
+      "    Registered Events: \n",
+      "      Registered Observers:\n",
+      "        vtkObserver (000001EED483EBF0)\n",
+      "          Event: 33\n",
+      "          EventName: ModifiedEvent\n",
+      "          Command: 000001EED2D2B950\n",
+      "          Priority: 0\n",
+      "          Tag: 1\n",
+      "    Number Of Arrays: 0\n",
+      "    Number Of Components: 0\n",
+      "    Number Of Tuples: 0\n",
+      "    Copy Tuple Flags: ( 1 1 1 1 1 0 1 1 1 1 1 )\n",
+      "    Interpolate Flags: ( 1 1 1 1 1 0 0 1 1 1 1 )\n",
+      "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
+      "    Scalars: (none)\n",
+      "    Vectors: (none)\n",
+      "    Normals: (none)\n",
+      "    TCoords: (none)\n",
+      "    Tensors: (none)\n",
+      "    GlobalIds: (none)\n",
+      "    PedigreeIds: (none)\n",
+      "    EdgeFlag: (none)\n",
+      "    Tangents: (none)\n",
+      "    RationalWeights: (none)\n",
+      "    HigherOrderDegrees: (none)\n",
+      "  Bounds: \n",
+      "    Xmin,Xmax: (1, -1)\n",
+      "    Ymin,Ymax: (1, -1)\n",
+      "    Zmin,Zmax: (1, -1)\n",
+      "  Compute Time: 0\n",
+      "  Editable: false\n",
+      "  Number Of Points: 0\n",
+      "  Point Coordinates: 0000000000000000\n",
+      "  PointLocator: 0000000000000000\n",
+      "  CellLocator: 0000000000000000\n",
+      "  Number Of Vertices: 0\n",
+      "  Number Of Lines: 0\n",
+      "  Number Of Polygons: 0\n",
+      "  Number Of Triangle Strips: 0\n",
+      "  Number Of Pieces: 1\n",
+      "  Piece: -1\n",
+      "  Ghost Level: 0\n",
+      "  CellsBounds: \n",
+      "    Xmin,Xmax: (1, -1)\n",
+      "    Ymin,Ymax: (1, -1)\n",
+      "    Zmin,Zmax: (1, -1)\n",
+      "  CellsBounds Time: 0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(source.GetOutput())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "30e56fec-f479-49a5-b102-bf29d5d09a80",
    "metadata": {},
    "outputs": [],
@@ -365,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e25ac849-5311-4b20-a6ba-16f23df29782",
    "metadata": {},
    "outputs": [
@@ -373,9 +492,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLActor (0000020C207DB420)\n",
+      "vtkOpenGLActor (000001EED46EA4E0)\n",
       "  Debug: Off\n",
-      "  Modified Time: 516\n",
+      "  Modified Time: 593\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
       "  Dragable: On\n",
@@ -393,19 +512,19 @@
       "  Origin: (0, 0, 0)\n",
       "  Scale: (1, 1, 1)\n",
       "  Bounds: \n",
-      "    Xmin,Xmax: (-4.44584, 5.99809)\n",
-      "    Ymin,Ymax: (-3.63704, 2.75972)\n",
-      "    Zmin,Zmax: (-1.70141, 1.70141)\n",
+      "    Xmin,Xmax: (-0.487464, 0.487464)\n",
+      "    Ymin,Ymax: (-0.487464, 0.487464)\n",
+      "    Zmin,Zmax: (-0.5, 0.5)\n",
       "  UserTransform: (none)\n",
       "  UserMatrix: (none)\n",
       "  Mapper:\n",
       "    Debug: Off\n",
-      "    Modified Time: 506\n",
+      "    Modified Time: 583\n",
       "    Reference Count: 3\n",
       "    Registered Events: (none)\n",
-      "    Executive: 0000020C1F2ADB20\n",
+      "    Executive: 000001EED2DCE760\n",
       "    ErrorCode: No error\n",
-      "    Information: 0000020C20A91BC0\n",
+      "    Information: 000001EED2BFA0F0\n",
       "    AbortExecute: Off\n",
       "    Progress: 0\n",
       "    Progress Text: (None)\n",
@@ -451,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "8ce3d5a8-6814-4f42-9e10-ce4891546167",
    "metadata": {},
    "outputs": [
@@ -459,9 +578,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLActor (0000020C207DB420)\n",
+      "vtkOpenGLActor (000001EED46EA4E0)\n",
       "  Debug: Off\n",
-      "  Modified Time: 530\n",
+      "  Modified Time: 687\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
       "  Dragable: On\n",
@@ -479,19 +598,19 @@
       "  Origin: (0, 0, 0)\n",
       "  Scale: (1, 1, 1)\n",
       "  Bounds: \n",
-      "    Xmin,Xmax: (-4.44584, 5.99809)\n",
-      "    Ymin,Ymax: (-3.63704, 2.75972)\n",
-      "    Zmin,Zmax: (-1.70141, 1.70141)\n",
+      "    Xmin,Xmax: (-0.487464, 0.487464)\n",
+      "    Ymin,Ymax: (-0.487464, 0.487464)\n",
+      "    Zmin,Zmax: (-0.5, 0.5)\n",
       "  UserTransform: (none)\n",
       "  UserMatrix: (none)\n",
       "  Mapper:\n",
       "    Debug: Off\n",
-      "    Modified Time: 506\n",
+      "    Modified Time: 583\n",
       "    Reference Count: 3\n",
       "    Registered Events: (none)\n",
-      "    Executive: 0000020C1F2ADB20\n",
+      "    Executive: 000001EED2DCE760\n",
       "    ErrorCode: No error\n",
-      "    Information: 0000020C20A91BC0\n",
+      "    Information: 000001EED2BFA0F0\n",
       "    AbortExecute: Off\n",
       "    Progress: 0\n",
       "    Progress Text: (None)\n",
@@ -518,7 +637,7 @@
       "    Number of sub pieces: 1\n",
       "  Property:\n",
       "    Debug: Off\n",
-      "    Modified Time: 530\n",
+      "    Modified Time: 687\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Ambient: 0\n",
@@ -585,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "35d14a1a-2c4c-4c1a-a247-e2e91c16bbfc",
    "metadata": {},
    "outputs": [
@@ -593,9 +712,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLRenderer (0000020C1F2AF8A0)\n",
+      "vtkOpenGLRenderer (000001EED2BC92F0)\n",
       "  Debug: Off\n",
-      "  Modified Time: 538\n",
+      "  Modified Time: 696\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
       "  Aspect: (1, 1)\n",
@@ -613,7 +732,7 @@
       "  PickedZ: 1\n",
       "  Props:\n",
       "    Debug: Off\n",
-      "    Modified Time: 539\n",
+      "    Modified Time: 697\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Number Of Items: 0\n",
@@ -626,7 +745,7 @@
       "  Display Point: (0, 0, 0)\n",
       "  Lights:\n",
       "    Debug: Off\n",
-      "    Modified Time: 541\n",
+      "    Modified Time: 699\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Number Of Items: 0\n",
@@ -665,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "c2c01af6-fa06-4476-ac69-321efe76a086",
    "metadata": {},
    "outputs": [
@@ -673,9 +792,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLCamera (0000020C2090C4D0)\n",
+      "vtkOpenGLCamera (000001EED4814E50)\n",
       "  Debug: Off\n",
-      "  Modified Time: 550\n",
+      "  Modified Time: 708\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
       "  ClippingRange: (0.01, 1000.01)\n",
@@ -705,9 +824,9 @@
       "  ScreenBottomRight: (0.5, -0.5, -0.5)\n",
       "  ScreenTopRight: (0.5, 0.5, -0.5)\n",
       "  EyeSeparation: (0.06)\n",
-      "  WorldToScreenMatrix: (0000020C20AA1940\n",
+      "  WorldToScreenMatrix: (000001EED48F6F70\n",
       "    Debug: Off\n",
-      "    Modified Time: 552\n",
+      "    Modified Time: 710\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Elements:\n",
@@ -716,9 +835,9 @@
       "        0 0 1 0 \n",
       "        0 0 0 1 \n",
       "  )\n",
-      "  EyeTransformMatrix: (0000020C20AA11D0\n",
+      "  EyeTransformMatrix: (000001EED48F4C60\n",
       "    Debug: Off\n",
-      "    Modified Time: 554\n",
+      "    Modified Time: 712\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Elements:\n",
@@ -727,9 +846,9 @@
       "        0 0 1 0 \n",
       "        0 0 0 1 \n",
       "  )\n",
-      "  ModelTransformMatrix: (0000020C20AA12E0\n",
+      "  ModelTransformMatrix: (000001EED48F7080\n",
       "    Debug: Off\n",
-      "    Modified Time: 556\n",
+      "    Modified Time: 714\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Elements:\n",
@@ -738,15 +857,15 @@
       "        0 0 1 0 \n",
       "        0 0 0 1 \n",
       "  )\n",
-      "  ProjectionTransform: (0000020C20BA01B0\n",
+      "  ProjectionTransform: (000001EED2DF0630\n",
       "    Debug: Off\n",
-      "    Modified Time: 561\n",
+      "    Modified Time: 719\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Inverse: (0000000000000000)\n",
-      "    Matrix: (0000020C20AA2930)\n",
+      "    Matrix: (000001EED48F3FA0)\n",
       "      Debug: Off\n",
-      "      Modified Time: 606\n",
+      "      Modified Time: 764\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
       "      Elements:\n",
@@ -785,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "0eb6e407-5c45-47f8-8198-caa8e5e996d8",
    "metadata": {},
    "outputs": [],
@@ -811,18 +930,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "4aa927e3-6b2a-4677-a0ca-2811f1dcb519",
    "metadata": {},
    "outputs": [],
    "source": [
-    "coneSource.SetResolution(8)\n",
+    "coneSource.SetResolution(60)\n",
     "\n",
     "#Definimos propiedades en el objeto Property, que es un atributo del actor\n",
-    "actor.GetProperty().SetDiffuseColor(colors.GetColor3d('brown_madder'))\n",
+    "actor.GetProperty().SetDiffuseColor(colors.GetColor3d('white'))\n",
     "\n",
     "# Se pone color de fondo en el renderer\n",
-    "renderer.SetBackground(colors.GetColor3d('snow'))\n",
+    "renderer.SetBackground(colors.GetColor3d('black'))\n",
     "\n",
     "#actor.GetProperty().SetInterpolationToFlat()\n",
     "actor.GetProperty().SetInterpolationToGouraud()"
@@ -840,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "412761eb-3cec-44eb-ba96-017ee3d041ad",
    "metadata": {},
    "outputs": [
@@ -848,9 +967,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkWin32OpenGLRenderWindow (0000020C20AF1730)\n",
+      "vtkWin32OpenGLRenderWindow (000001EED494A400)\n",
       "  Debug: Off\n",
-      "  Modified Time: 632\n",
+      "  Modified Time: 790\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
       "  Erase: On\n",
@@ -869,7 +988,7 @@
       "  Full Screen: Off\n",
       "  Renderers:\n",
       "    Debug: Off\n",
-      "    Modified Time: 629\n",
+      "    Modified Time: 787\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Number Of Items: 1\n",
@@ -923,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "f0dee809-e95e-4830-868b-78812c6aca0f",
    "metadata": {},
    "outputs": [],
@@ -943,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "a82a18fb-9912-434d-ba74-e779ccd2019e",
    "metadata": {},
    "outputs": [],
