--- a/vtk-Cube1.ipynb
+++ b/vtk-Cube1.ipynb
@@ -43,14 +43,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkCubeSource (000001B21CF7E380)\n",
+      "vtkCubeSource (0000024C24C12E20)\n",
       "  Debug: Off\n",
       "  Modified Time: 68\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 000001B21B832BB0\n",
+      "  Executive: 0000024C26624FF0\n",
       "  ErrorCode: No error\n",
-      "  Information: 000001B21CFC06F0\n",
+      "  Information: 0000024C27C410B0\n",
       "  AbortExecute: Off\n",
       "  Progress: 1\n",
       "  Progress Text: (None)\n",
@@ -88,12 +88,12 @@
      "text": [
       "Clase:  <class 'vtkmodules.vtkCommonDataModel.vtkPolyData'> \n",
       "\n",
-      "vtkPolyData (000001B21B5CCDB0)\n",
+      "vtkPolyData (0000024C26391FC0)\n",
       "  Debug: Off\n",
       "  Modified Time: 215\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Information: 000001B21CFC2A60\n",
+      "  Information: 0000024C27EA3630\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
       "  UpdateTime: 216\n",
@@ -113,10 +113,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (000001B21D0F4680)\n",
+      "        vtkObserver (0000024C27E7A9D0)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 000001B21D1145F0\n",
+      "          Command: 0000024C27E9E800\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -142,10 +142,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (000001B21D0F4890)\n",
+      "        vtkObserver (0000024C27E7AFD0)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 000001B21D1145F0\n",
+      "          Command: 0000024C27E9E800\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 2\n",
@@ -206,7 +206,7 @@
       "  Compute Time: 228\n",
       "  Editable: false\n",
       "  Number Of Points: 24\n",
-      "  Point Coordinates: 000001B21D115A30\n",
+      "  Point Coordinates: 0000024C27C04250\n",
       "  PointLocator: 0000000000000000\n",
       "  CellLocator: 0000000000000000\n",
       "  Number Of Vertices: 0\n",
@@ -245,12 +245,12 @@
      "text": [
       "<class 'vtkmodules.vtkCommonCore.vtkPoints'> \n",
       "\n",
-      "vtkPoints (000001B21D115A30)\n",
+      "vtkPoints (0000024C27C04250)\n",
       "  Debug: Off\n",
       "  Modified Time: 191\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Data: 000001B21B858ED0\n",
+      "  Data: 0000024C27EB2700\n",
       "  Data Array Name: Points\n",
       "  Number Of Points: 24\n",
       "  Bounds: \n",
@@ -334,14 +334,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLPolyDataMapper (000001B21B7AB810)\n",
+      "vtkOpenGLPolyDataMapper (0000024C263AF9A0)\n",
       "  Debug: Off\n",
       "  Modified Time: 353\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 000001B21B833150\n",
+      "  Executive: 0000024C26625110\n",
       "  ErrorCode: No error\n",
-      "  Information: 000001B21CFC3860\n",
+      "  Information: 0000024C27EA3390\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -398,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkOpenGLActor (000001B21CDD96A0)\n",
+      "vtkOpenGLActor (0000024C27B5A750)\n",
       "  Debug: Off\n",
       "  Modified Time: 369\n",
       "  Reference Count: 1\n",
@@ -428,9 +428,9 @@
       "    Modified Time: 353\n",
       "    Reference Count: 3\n",
       "    Registered Events: (none)\n",
-      "    Executive: 000001B21B833150\n",
+      "    Executive: 0000024C26625110\n",
       "    ErrorCode: No error\n",
-      "    Information: 000001B21CFC3860\n",
+      "    Information: 0000024C27EA3390\n",
       "    AbortExecute: Off\n",
       "    Progress: 0\n",
       "    Progress Text: (None)\n",
@@ -550,14 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6d121b51-c53b-48db-bb11-c2fd1e0d7a1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Enable user interface interactor.\n",
     "#iren.Initialize()\n",
-    "#renWin.Render()\n",
+    "ren.LightFollowCameraOff() # No parece funcionar\n",
+    "iren.LightFollowCameraOff() # No parece funcionar\n",
+    "renWin.Render()\n",
     "iren.Start()\n",
     "\n",
     "del iren, renWin"
@@ -566,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7637a84b-cf58-47f5-a351-2883e27d8d47",
+   "id": "27243d06-d143-4483-bfe1-002853da6d3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -574,7 +576,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
