--- a/vtk-SpecularSpheres.ipynb
+++ b/vtk-SpecularSpheres.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9e939994-8a90-42cb-be80-6f5a3ab495fb",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
