--- a/vtk-Tutorial_1.ipynb
+++ b/vtk-Tutorial_1.ipynb
@@ -58,14 +58,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkConeSource (000001CF5DEA17A0)\n",
+      "vtkConeSource (0000025D96312790)\n",
       "  Debug: Off\n",
       "  Modified Time: 98\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 000001CF5C9918D0\n",
+      "  Executive: 0000025D94BF1D90\n",
       "  ErrorCode: No error\n",
-      "  Information: 000001CF5E1BDB90\n",
+      "  Information: 0000025D9624DF70\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -80,12 +80,12 @@
       "\n",
       "Clase:  <class 'vtkmodules.vtkCommonDataModel.vtkPolyData'> \n",
       "\n",
-      "vtkPolyData (000001CF5C7B2190)\n",
+      "vtkPolyData (0000025D949A2110)\n",
       "  Debug: Off\n",
       "  Modified Time: 205\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Information: 000001CF5E1BDCE0\n",
+      "  Information: 0000025D94B3AD30\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
       "  UpdateTime: 206\n",
@@ -105,10 +105,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (000001CF5E10CA90)\n",
+      "        vtkObserver (0000025D964AD600)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 000001CF5E28C430\n",
+      "          Command: 0000025D94AB5BE0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -134,10 +134,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (000001CF5E10CA30)\n",
+      "        vtkObserver (0000025D964AD420)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 000001CF5E28C430\n",
+      "          Command: 0000025D94AB5BE0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -164,7 +164,7 @@
       "  Compute Time: 218\n",
       "  Editable: false\n",
       "  Number Of Points: 11\n",
-      "  Point Coordinates: 000001CF5DFEF260\n",
+      "  Point Coordinates: 0000025D96219790\n",
       "  PointLocator: 0000000000000000\n",
       "  CellLocator: 0000000000000000\n",
       "  Number Of Vertices: 0\n",
@@ -205,28 +205,134 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d1a6349-538c-4689-a2fb-deda633932f0",
+   "id": "a60629f8-97ae-421a-a195-db596684f787",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1.5, 0.0, 0.0)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkPoints (0000025D96219790)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 203\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Data: 0000025D94C0D100\n",
+      "  Data Array Name: Points\n",
+      "  Number Of Points: 11\n",
+      "  Bounds: \n",
+      "    Xmin,Xmax: (-1.5, 1.5)\n",
+      "    Ymin,Ymax: (-1, 1)\n",
+      "    Zmin,Zmax: (-0.951057, 0.951057)\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "# Podemos obtener los puntos \n",
-    "cone_pd.GetPoints().GetPoint(0)"
+    "print(cone_pd.GetPoints())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "7d1a6349-538c-4689-a2fb-deda633932f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1.5, 0.0, 0.0)\n",
+      "(-1.5, 1.0, 0.0)\n",
+      "(-1.5, 0.80901700258255, 0.5877852439880371)\n",
+      "(-1.5, 0.30901700258255005, 0.9510565400123596)\n",
+      "(-1.5, -0.30901700258255005, 0.9510565400123596)\n",
+      "(-1.5, -0.80901700258255, 0.5877852439880371)\n",
+      "(-1.5, -1.0, 1.2246468525851679e-16)\n",
+      "(-1.5, -0.80901700258255, -0.5877852439880371)\n",
+      "(-1.5, -0.30901700258255005, -0.9510565400123596)\n",
+      "(-1.5, 0.30901700258255005, -0.9510565400123596)\n",
+      "(-1.5, 0.80901700258255, -0.5877852439880371)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Podemos obtener los puntos \n",
+    "for k in range(0,11):\n",
+    "    print(cone_pd.GetPoints().GetPoint(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1dc63370-d875-458d-af52-9c0acb9c73c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkTriangle (0000025D96216E30)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 221\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Number Of Points: 3\n",
+      "  Bounds: \n",
+      "    Xmin,Xmax: (-1.5, 1.5)\n",
+      "    Ymin,Ymax: (-1, 0)\n",
+      "    Zmin,Zmax: (0, 0.587785)\n",
+      "    Point ids are: 0, 5, 6  \n",
+      "  Line:\n",
+      "    Debug: Off\n",
+      "    Modified Time: 234\n",
+      "    Reference Count: 1\n",
+      "    Registered Events: (none)\n",
+      "    Number Of Points: 2\n",
+      "    Bounds: \n",
+      "      Xmin,Xmax: (0, 0)\n",
+      "      Ymin,Ymax: (0, 0)\n",
+      "      Zmin,Zmax: (0, 0)\n",
+      "      Point ids are: 0, 0    \n",
+      "\n",
+      "\n",
+      "vtkTriangle (0000025D96216E30)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 221\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Number Of Points: 3\n",
+      "  Bounds: \n",
+      "    Xmin,Xmax: (-1.5, 1.5)\n",
+      "    Ymin,Ymax: (-1, 0)\n",
+      "    Zmin,Zmax: (-0.587785, 1.22465e-16)\n",
+      "    Point ids are: 0, 6, 7  \n",
+      "  Line:\n",
+      "    Debug: Off\n",
+      "    Modified Time: 234\n",
+      "    Reference Count: 1\n",
+      "    Registered Events: (none)\n",
+      "    Number Of Points: 2\n",
+      "    Bounds: \n",
+      "      Xmin,Xmax: (0, 0)\n",
+      "      Ymin,Ymax: (0, 0)\n",
+      "      Zmin,Zmax: (0, 0)\n",
+      "      Point ids are: 0, 0    \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Y las celdas\n",
+    "for k in range(5,7):\n",
+    "    print(cone_pd.GetCell(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "be62dd3a-66ad-4eb3-96a6-b0de3a434607",
    "metadata": {},
    "outputs": [],
@@ -237,20 +343,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f48291d3-782a-408d-bd7e-c7a58bee741b",
+   "execution_count": 9,
+   "id": "972f21f3-4d0e-4347-ac69-09fcb95e652c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkOpenGLProperty (0000025D9617CC80)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 352\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Ambient: 0\n",
+      "  Ambient Color: (1, 1, 1)\n",
+      "  Diffuse: 1\n",
+      "  Diffuse Color: (1, 1, 1)\n",
+      "  Edge Color: (0, 0, 0)\n",
+      "  Edge Visibility: Off\n",
+      "  Vertex Color: (0.5, 1, 0.5)\n",
+      "  Vertex Visibility: Off\n",
+      "  Interpolation: VTK_GOURAUD\n",
+      "  Opacity: 1\n",
+      "  Representation: VTK_SURFACE\n",
+      "  Specular: 0\n",
+      "  Specular Color: (1, 1, 1)\n",
+      "  Specular Power: 1\n",
+      "  Backface Culling: Off\n",
+      "  Frontface Culling: Off\n",
+      "  Point size: 1\n",
+      "  Line width: 1\n",
+      "  Line stipple pattern: 65535\n",
+      "  Line stipple repeat factor: 1\n",
+      "  Lighting: On\n",
+      "  RenderPointsAsSpheres: Off\n",
+      "  RenderLinesAsTubes: Off\n",
+      "  ShowTexturesOnBackface: On\n",
+      "  Shading: Off\n",
+      "  MaterialName: (none)\n",
+      "  Color: (1, 1, 1)\n",
+      "  EmissiveFactor: (1, 1, 1)\n",
+      "  NormalScale: 1\n",
+      "  OcclusionStrength: 1\n",
+      "  Metallic: 0\n",
+      "  Roughness: 0.5\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "coneActor = vtkActor()\n",
-    "coneActor.SetMapper(coneMapper)\n",
-    "coneActor.GetProperty().SetColor(colors.GetColor3d('MistyRose'))\n",
-    "coneActor.GetProperty().SetOpacity(0.5)"
+    "print(coneActor.GetProperty())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "38a7da72-b552-4065-8def-f671e318447c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkOpenGLProperty (0000025D9617CC80)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 358\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Ambient: 0\n",
+      "  Ambient Color: (1, 0.894118, 0.882353)\n",
+      "  Diffuse: 1\n",
+      "  Diffuse Color: (1, 0.894118, 0.882353)\n",
+      "  Edge Color: (0, 0, 0)\n",
+      "  Edge Visibility: Off\n",
+      "  Vertex Color: (0.5, 1, 0.5)\n",
+      "  Vertex Visibility: Off\n",
+      "  Interpolation: VTK_GOURAUD\n",
+      "  Opacity: 0.5\n",
+      "  Representation: VTK_SURFACE\n",
+      "  Specular: 0\n",
+      "  Specular Color: (1, 0.894118, 0.882353)\n",
+      "  Specular Power: 1\n",
+      "  Backface Culling: Off\n",
+      "  Frontface Culling: Off\n",
+      "  Point size: 1\n",
+      "  Line width: 1\n",
+      "  Line stipple pattern: 65535\n",
+      "  Line stipple repeat factor: 1\n",
+      "  Lighting: On\n",
+      "  RenderPointsAsSpheres: Off\n",
+      "  RenderLinesAsTubes: Off\n",
+      "  ShowTexturesOnBackface: On\n",
+      "  Shading: Off\n",
+      "  MaterialName: (none)\n",
+      "  Color: (1, 0.894118, 0.882353)\n",
+      "  EmissiveFactor: (1, 1, 1)\n",
+      "  NormalScale: 1\n",
+      "  OcclusionStrength: 1\n",
+      "  Metallic: 0\n",
+      "  Roughness: 0.5\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "coneActor.SetMapper(coneMapper)\n",
+    "coneActor.GetProperty().SetColor(colors.GetColor3d('MistyRose'))\n",
+    "coneActor.GetProperty().SetOpacity(0.5)\n",
+    "\n",
+    "print(coneActor.GetProperty())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "8d7b6e63-f5b6-41ff-a1fa-712b7db19527",
    "metadata": {},
    "outputs": [],
@@ -261,7 +471,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
+   "id": "d786e886-d10b-49f3-9465-93911772b334",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkAxesActor (0000025D962D74A0)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 3533\n",
+      "  Reference Count: 1\n",
+      "  Registered Events: (none)\n",
+      "  Dragable: On\n",
+      "  Pickable: On\n",
+      "  AllocatedRenderTime: 10\n",
+      "  EstimatedRenderTime: 0\n",
+      "  NumberOfConsumers: 0\n",
+      "  RenderTimeMultiplier: 1\n",
+      "  Visibility: On\n",
+      "  PropertyKeys: none.\n",
+      "  useBounds: 1\n",
+      "  IsIdentity: true\n",
+      "  Position: (0, 0, 0)\n",
+      "  Orientation: (0, 0, 0)\n",
+      "  Origin: (0, 0, 0)\n",
+      "  Scale: (1, 1, 1)\n",
+      "  Bounds: \n",
+      "    Xmin,Xmax: (-2, 2)\n",
+      "    Ymin,Ymax: (-1, 1)\n",
+      "    Zmin,Zmax: (-1, 1)\n",
+      "  UserTransform: (none)\n",
+      "  UserMatrix: (none)\n",
+      "  UserDefinedShaft: (none)\n",
+      "  UserDefinedTip: (none)\n",
+      "  XAxisLabelText: X\n",
+      "  YAxisLabelText: Y\n",
+      "  ZAxisLabelText: Z\n",
+      "  AxisLabels: On\n",
+      "  ShaftType: 1\n",
+      "  TipType: 0\n",
+      "  SphereRadius: 0.5\n",
+      "  SphereResolution: 16\n",
+      "  CylinderRadius: 0.05\n",
+      "  CylinderResolution: 16\n",
+      "  ConeRadius: 0.4\n",
+      "  ConeResolution: 16\n",
+      "  NormalizedShaftLength: 0.8,0.8,0.8\n",
+      "  NormalizedTipLength: 0.2,0.2,0.2\n",
+      "  TotalLength: 2,1,1\n",
+      "  NormalizedLabelPosition: 1,1,1\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(axes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "a2c67463-62ff-4367-812c-0c288c1173e7",
    "metadata": {},
    "outputs": [],
@@ -274,8 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "fda1fe36-42fd-467c-944c-dba83c312a8a",
+   "execution_count": 14,
+   "id": "8b1d07f5-b962-4260-9454-644397da8af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "6e1aa0bf-995c-4260-a160-8d5e0a292e06",
    "metadata": {},
    "outputs": [],
@@ -297,12 +569,12 @@
     "    renWin.Render()\n",
     "    # Rotar la cámara activa 1º\n",
     "    ren1.GetActiveCamera().Azimuth(1)\n",
-    "    time.sleep(0.01)"
+    "    time.sleep(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "df6399f2-cbfb-420d-ab9c-e96dd29b7187",
    "metadata": {},
    "outputs": [],
@@ -313,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f81bede4-473d-458f-99a3-354330a54aa2",
+   "id": "2e711131-076f-4e8b-bb5a-20cc40a79aea",
    "metadata": {},
    "outputs": [],
    "source": []
