--- a/vtk-Tutorial_4.ipynb
+++ b/vtk-Tutorial_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "7d037abd-6be2-4ae4-9af5-781eeafaa4f5",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "c01b9826-4ddd-4285-9ca6-a117e9cf59eb",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d9ab1a5d-9272-49aa-b947-475ed1c51cb2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "be62dd3a-66ad-4eb3-96a6-b0de3a434607",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f48291d3-782a-408d-bd7e-c7a58bee741b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "id": "e220f870-ea58-4e48-b1c9-2ff83ffd3586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkOpenGLProperty (00000210D57392E0)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 214\n",
+      "  Reference Count: 2\n",
+      "  Registered Events: (none)\n",
+      "  Ambient: 0\n",
+      "  Ambient Color: (0.2, 0.63, 0.79)\n",
+      "  Diffuse: 0.7\n",
+      "  Diffuse Color: (0.2, 0.63, 0.79)\n",
+      "  Edge Color: (0, 0, 0)\n",
+      "  Edge Visibility: Off\n",
+      "  Vertex Color: (0.5, 1, 0.5)\n",
+      "  Vertex Visibility: Off\n",
+      "  Interpolation: VTK_GOURAUD\n",
+      "  Opacity: 1\n",
+      "  Representation: VTK_SURFACE\n",
+      "  Specular: 0.4\n",
+      "  Specular Color: (0.2, 0.63, 0.79)\n",
+      "  Specular Power: 20\n",
+      "  Backface Culling: Off\n",
+      "  Frontface Culling: Off\n",
+      "  Point size: 1\n",
+      "  Line width: 1\n",
+      "  Line stipple pattern: 65535\n",
+      "  Line stipple repeat factor: 1\n",
+      "  Lighting: On\n",
+      "  RenderPointsAsSpheres: Off\n",
+      "  RenderLinesAsTubes: Off\n",
+      "  ShowTexturesOnBackface: On\n",
+      "  Shading: Off\n",
+      "  MaterialName: (none)\n",
+      "  Color: (0.2, 0.63, 0.79)\n",
+      "  EmissiveFactor: (1, 1, 1)\n",
+      "  NormalScale: 1\n",
+      "  OcclusionStrength: 1\n",
+      "  Metallic: 0\n",
+      "  Roughness: 0.5\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(coneActor.GetProperty())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "263280db-1e24-4d81-87f0-057a930a8191",
    "metadata": {},
    "outputs": [],
@@ -92,7 +148,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
+   "id": "2aa71516-97a0-407b-8b32-d968907a9fa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vtkOpenGLProperty (00000210D5739740)\n",
+      "  Debug: Off\n",
+      "  Modified Time: 221\n",
+      "  Reference Count: 1\n",
+      "  Registered Events: (none)\n",
+      "  Ambient: 0\n",
+      "  Ambient Color: (1, 0.388235, 0.278431)\n",
+      "  Diffuse: 0.7\n",
+      "  Diffuse Color: (1, 0.388235, 0.278431)\n",
+      "  Edge Color: (0, 0, 0)\n",
+      "  Edge Visibility: Off\n",
+      "  Vertex Color: (0.5, 1, 0.5)\n",
+      "  Vertex Visibility: Off\n",
+      "  Interpolation: VTK_GOURAUD\n",
+      "  Opacity: 1\n",
+      "  Representation: VTK_SURFACE\n",
+      "  Specular: 0.4\n",
+      "  Specular Color: (1, 0.388235, 0.278431)\n",
+      "  Specular Power: 20\n",
+      "  Backface Culling: Off\n",
+      "  Frontface Culling: Off\n",
+      "  Point size: 1\n",
+      "  Line width: 1\n",
+      "  Line stipple pattern: 65535\n",
+      "  Line stipple repeat factor: 1\n",
+      "  Lighting: On\n",
+      "  RenderPointsAsSpheres: Off\n",
+      "  RenderLinesAsTubes: Off\n",
+      "  ShowTexturesOnBackface: On\n",
+      "  Shading: Off\n",
+      "  MaterialName: (none)\n",
+      "  Color: (1, 0.388235, 0.278431)\n",
+      "  EmissiveFactor: (1, 1, 1)\n",
+      "  NormalScale: 1\n",
+      "  OcclusionStrength: 1\n",
+      "  Metallic: 0\n",
+      "  Roughness: 0.5\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(property)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b07b2940-4ab0-4b9a-a7b2-521dbcb1a325",
    "metadata": {},
    "outputs": [],
@@ -106,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "a2c67463-62ff-4367-812c-0c288c1173e7",
    "metadata": {},
    "outputs": [],
@@ -119,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "fda1fe36-42fd-467c-944c-dba83c312a8a",
    "metadata": {},
    "outputs": [],
@@ -132,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "6e1aa0bf-995c-4260-a160-8d5e0a292e06",
    "metadata": {},
    "outputs": [],
@@ -142,12 +254,12 @@
     "    renWin.Render()\n",
     "    # Rotar la cámara activa 1º\n",
     "    ren1.GetActiveCamera().Azimuth(1)\n",
-    "    time.sleep(0.01)"
+    "    time.sleep(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "df6399f2-cbfb-420d-ab9c-e96dd29b7187",
    "metadata": {},
    "outputs": [],
@@ -158,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ee416b-6af7-4153-81fa-e22c1cd7dbc9",
+   "id": "ebff0ad0-d331-4cec-9a8f-b768a9c6d4ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -166,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
