--- a/vtk-Tutorial_5.ipynb
+++ b/vtk-Tutorial_5.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f6c761a-d5f8-45db-b7b8-2f74f2b7ee12",
+   "id": "0bbd52ea-9cbe-4c83-ade3-54e47065c466",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
