--- a/vtk-Tutorial_6.ipynb
+++ b/vtk-Tutorial_6.ipynb
@@ -188,13 +188,13 @@
    "source": [
     "iren.Start()\n",
     "\n",
-    "del renWin, iren"
+    "del renWin"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f6c761a-d5f8-45db-b7b8-2f74f2b7ee12",
+   "id": "dea9c1e2-4a40-497f-9a24-acc878659122",
    "metadata": {},
    "outputs": [],
    "source": []
