--- a/vtk-Tutorial_3.ipynb
+++ b/vtk-Tutorial_3.ipynb
@@ -94,9 +94,7 @@
     "ren2 = vtkRenderer()\n",
     "ren2.AddActor(coneActor)\n",
     "ren2.SetBackground(colors.GetColor3d('DodgerBlue'))\n",
-    "ren2.SetViewport(0.5, 0.0, 1.0, 1.0)\n",
-    "\n",
-    "ren2.SetViewport(0.5, 0.0, 1.0, 1.0)"
+    "ren2.SetViewport(0.5, 0.0, 1.0, 1.0)\n"
    ]
   },
   {
@@ -142,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ee416b-6af7-4153-81fa-e22c1cd7dbc9",
+   "id": "66791e85-ee98-418b-b0cc-284f78f3b9f5",
    "metadata": {},
    "outputs": [],
    "source": []
